--- a/less/define/colors.less
+++ b/less/define/colors.less
@@ -49,7 +49,7 @@
 @color-light-violet: lighten(@color-violet, 30%);
 @color-light-violetred: lighten(@color-violetred, 30%);
 
-@color-primary: #C80017;
+@color-primary: #B51010;
 @color-primary-dark: darken(@color-primary, 20%);
 @color-primary-light: lighten(@color-primary, 33%);
 @color-secondary: #ffffff; // need to replace
@@ -77,3 +77,5 @@
 
 @color-link: @color-primary;
 @color-body: @color-dark-gray;
+
+@color-background: #e7e7e7;
