--- a/less/style.less
+++ b/less/style.less
@@ -8,6 +8,8 @@
 @import 'make/type';
 @import 'make/grid';
 
+@import 'temp';
+
 .block {
 	font-family: @font-family-headings;
 	display: inline-block;
