--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -1,205 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+{{#partial "title"}}Propcott{{/partial}}
 
-	<title>{{title}}{{^title}}Propcott{{/title}}</title>
+{{#partial "content"}}
+<style>
+.contentbox {
+    border-radius: 10px;
+    background-color: white;
+}
+</style>
+<div class="container">
 
-	<link href="/css/style.css" rel="stylesheet">
-	<link href="/css/temp.css" rel="stylesheet">
-	<link href="/css/home.css" rel="stylesheet">
-	<link href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,400italic,700italic|Merriweather:400,400italic,700,700italic" rel="stylesheet" type="text/css">
-	<noscript><style type="text/javascript">.autosize {height: 8em;}</style></noscript>
-	<script src='https://www.google.com/recaptcha/api.js'></script>
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
-<body>
-	{{#alert}}
-	<div class="alert-container">
-		<div class="container" style="text-align: center;">
-			{{#messages}}<div class="alert-{{type}}">{{content}}</div>{{/messages}}
-		</div>
-	</div>
-	{{/alert}}
+	<p style="text-align: center;">
+		<a href="/oauth/facebook" class="block" style="display: inline-block; border: 1px solid #eee; margin: 0.5em; padding: .5em 5em;color: white;cursor: pointer;background-color: rgb(0, 119, 255);border-radius: 10px;">Log in with Facebook <span class="typcn typcn-social-facebook"></span></a>
+	</p>
+
+	<div class="contentbox">
 	
-	<div id="navigation">
-		<div class="container">
-			<a href="/"><div id="navigation-logo"></div></a>
-			<a class="block round navigation-item" href="/search">
-				<span class="navigation-text">Search</span>
-				<span class="typcn typcn-zoom"></span>
-			</a>
-			<a class="block round navigation-item" href="/explore">
-				<span class="navigation-text">Explore</span>
-				<span class="typcn typcn-news"></span>
-			</a>
-			<a class="block round navigation-item" href="/new">
-				<span class="navigation-text">Start a Propcott</span>
-				<span class="typcn typcn-edit"></span>
-			</a>
-		<div class="navigation-right">
-			{{#user}}
-				<span class="dropdown">
-					<a href="/account" class="block round navigation-item">
-						<span class="navigation-text">{{name}}</span>
-						{{#avatar}}
-							<span class="navigation-avatar" style="background-image: url('{{url}}');"></span>
-						{{/avatar}}
-						{{^avatar}}
-							<span class="typcn typcn-user"></span>
-						{{/avatar}}
-					</a>
-					<ul class="dropdown-content">
-						<li><a href="/account">Account</a></li>
-						<li><a href="/account/propcotts">My Propcotts</a></li>
-						<li><a href="/logout">Log out</a></li>
-					</ul>
-				</span>
-			{{/user}}
-			{{^user}}
-				<a class="block round navigation-item" href="/login">
-					<span class="navigation-text">Log In</span>
-					<span class="typcn typcn-user"></span>
-				</a>
-			{{/user}}
-			</div>
+	</div>
+
+	<div class="row">
+		<div class="col-6" style="vertical-align: top;">
+			<h2 style="margin-top: 0;">Login</h2>
+			<form class="form-horizontal" role="form" method="POST">
+				{{csrf_field}}
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">E-Mail Address</label>
+					<div class="col-md-6">
+						<input type="email" class="form-control" name="email">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Password</label>
+					<div class="col-md-6">
+						<input type="password" class="form-control" name="password">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-md-6 col-md-offset-4">
+						<div class="checkbox">
+							<label>
+								<input type="checkbox" name="remember"> Remember Me
+							</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-md-6 col-md-offset-4">
+						<input type="submit" name="login" value="Login" class="btn btn-primary">
+						<br>
+						<a class="btn btn-link" href="/login/forgot">Forgot Your Password?</a>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="col-6" style="vertical-align: top;">
+			<h2 style="margin-top: 0;">Sign up</h2>
+			<form class="form-horizontal" role="form" method="POST" action="/register">
+				{{csrf_field}}
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Name</label>
+					<div class="col-md-6">
+						<input type="text" class="form-control" name="name">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">E-Mail Address</label>
+					<div class="col-md-6">
+						<input type="email" class="form-control" name="email">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Password</label>
+					<div class="col-md-6">
+						<input type="password" class="form-control" name="password">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Confirm Password</label>
+					<div class="col-md-6">
+						<input type="password" class="form-control" name="password_confirmation">
+					</div>
+				</div>
+
+				<p style="font-weight:bold;font-style:italic;margin:0;">(optional)</p>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Organization</label>
+					<div class="col-md-6">
+						<input type="text" class="form-control" name="org">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="col-md-4 control-label">Website</label>
+					<div class="col-md-6">
+						<input type="text" class="form-control" name="org_link">
+					</div>
+				</div>
+
+				<div class="g-recaptcha" data-sitekey="6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"></div>
+				<noscript>
+					<iframe src="https://www.google.com/recaptcha/api/fallback?k=6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"
+						frameborder="0" scrolling="no"
+						style="width: 302px; height:423px; border-style: none; margin-bottom: .25em;">
+					</iframe>
+					<div style="width: 302px; height: 60px; border-style: none; bottom: 12px; left: 25px; margin-bottom: 1em; padding: 0px; right: 25px; background: #f9f9f9; border: 1px solid #c1c1c1; border-radius: 3px;">
+						<textarea id="g-recaptcha-response" name="g-recaptcha-response"
+							class="g-recaptcha-response"
+							style="width: 250px; height: 40px; border: 1px solid #c1c1c1;
+							margin: 10px 25px; padding: 0px; resize: none;" >
+						</textarea>
+					</div>
+				</noscript>
+				<div class="form-group">
+					<div class="col-md-6 col-md-offset-4">
+						<input type="submit" name="register" value="Register" class="btn btn-primary">
+					</div>
+				</div>
+			</form>
 		</div>
 	</div>
+</div>
+{{/partial}}
 
-	<div class="container">
-
-		<p style="text-align: center;">
-			<a href="/oauth/facebook" class="block" style="display: inline-block; border: 1px solid #eee; margin: 0.5em; padding: .5em 5em;color: white;cursor: pointer;background-color: rgb(0, 119, 255);border-radius: 10px;">Log in with Facebook <span class="typcn typcn-social-facebook"></span></a>
-		</p>
-
-		<div class="row">
-			<div class="col-6" style="vertical-align: top;">
-				<h2 style="margin-top: 0;">Login</h2>
-				<form class="form-horizontal" role="form" method="POST">
-					{{csrf_field}}
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">E-Mail Address</label>
-						<div class="col-md-6">
-							<input type="email" class="form-control" name="email">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Password</label>
-						<div class="col-md-6">
-							<input type="password" class="form-control" name="password">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-md-6 col-md-offset-4">
-							<div class="checkbox">
-								<label>
-									<input type="checkbox" name="remember"> Remember Me
-								</label>
-							</div>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-md-6 col-md-offset-4">
-							<input type="submit" name="login" value="Login" class="btn btn-primary">
-							<br>
-							<a class="btn btn-link" href="/login/forgot">Forgot Your Password?</a>
-						</div>
-					</div>
-				</form>
-			</div>
-			<div class="col-6" style="vertical-align: top;">
-				<h2 style="margin-top: 0;">Sign up</h2>
-				<form class="form-horizontal" role="form" method="POST" action="/register">
-					{{csrf_field}}
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Name</label>
-						<div class="col-md-6">
-							<input type="text" class="form-control" name="name">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">E-Mail Address</label>
-						<div class="col-md-6">
-							<input type="email" class="form-control" name="email">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Password</label>
-						<div class="col-md-6">
-							<input type="password" class="form-control" name="password">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Confirm Password</label>
-						<div class="col-md-6">
-							<input type="password" class="form-control" name="password_confirmation">
-						</div>
-					</div>
-
-					<p style="font-weight:bold;font-style:italic;margin:0;">(optional)</p>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Organization</label>
-						<div class="col-md-6">
-							<input type="text" class="form-control" name="org">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label class="col-md-4 control-label">Website</label>
-						<div class="col-md-6">
-							<input type="text" class="form-control" name="org_link">
-						</div>
-					</div>
-
-					<div class="g-recaptcha" data-sitekey="6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"></div>
-					<noscript>
-						<iframe src="https://www.google.com/recaptcha/api/fallback?k=6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"
-							frameborder="0" scrolling="no"
-							style="width: 302px; height:423px; border-style: none; margin-bottom: .25em;">
-						</iframe>
-						<div style="width: 302px; height: 60px; border-style: none; bottom: 12px; left: 25px; margin-bottom: 1em; padding: 0px; right: 25px; background: #f9f9f9; border: 1px solid #c1c1c1; border-radius: 3px;">
-							<textarea id="g-recaptcha-response" name="g-recaptcha-response"
-								class="g-recaptcha-response"
-								style="width: 250px; height: 40px; border: 1px solid #c1c1c1;
-								margin: 10px 25px; padding: 0px; resize: none;" >
-							</textarea>
-						</div>
-					</noscript>
-					<div class="form-group">
-						<div class="col-md-6 col-md-offset-4">
-							<input type="submit" name="register" value="Register" class="btn btn-primary">
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-
-	<div class="clearfix"></div>
-	<div id="footer" class="container">
-		<p>Copyright &copy; 2015 Propcott</p>
-		<p>
-			<a href="/about">About</a> &bull;
-			<a href="/contact">Contact</a> &bull;
-			<a href="/help">Help</a> &bull;
-			<a href="/privacy">Privacy Policy</a> &bull;
-			<a href="/terms">Terms of Service</a>
-		</p>
-	</div>
-</body>
-</html>
+{{>base}}
