--- a/app/views/base.html
+++ b/app/views/base.html
@@ -17,8 +17,10 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+	{{#block "head.end"}}{{/block}}
 </head>
 <body>
+{{#block "body.start"}}{{/block}}
 	{{#alert}}
 	<div class="alert-container">
 		<div class="container" style="text-align: center;">
@@ -84,5 +86,6 @@
 			<a href="/terms">Terms of Service</a>
 		</p>
 	</div>
+{{#block "body.end"}}{{/block}}
 </body>
 </html>
