--- a/app/views/static/about.html
+++ b/app/views/static/about.html
@@ -1,6 +1,6 @@
 {{#partial "title"}}About Propcott{{/partial}}
 
-{{#partial "content}}
+{{#partial "content"}}
 <div class="container">
 	<h1>About <small>Propcott</small></h1>
 
